# scatter-lang

./: Cargo.toml  LICENSE  README.md  grammar.ebnf
examples/: assert.sl  chars.sl  countdown.sl  countup.sl  debug.sl  distance.sl  e2e.sl  echo.sl  even.sl  factorial.sl  fibonacci.sl  fizzbuzz-functional.sl  fizzbuzz.sl  functions.sl  generation.sl  grade.sl  head.sl  ifib.sl  import1.sl  import2.sl  rfib.sl  sign.sl  simple.sl  test.sl  unicode.sl  var-1.sl  var-test.sl
int/: analyze-1.txt  analyze-2.txt  analyze-3.txt  capture-1.txt  capture-2.txt  capture-3.txt  capture-4.txt  codegen-1.txt  codegen-2.sl  codegen-2.txt  codegen-3.txt  codegen-4.sl  codegen-4.txt  interpreter-1.txt  interpreter-2.txt  interpreter-3.txt  interpreter-4.txt  interpreter-5.txt  interpreter-6.txt  interpreter-7.txt  interpreter-8.txt  interpreter-9-1.sl  interpreter-9-2.sl  interpreter-9.txt  repl-1.txt  repl-2.txt  repl-3.txt  repl-4.txt  repl-5.txt  repl-6.txt  runtime-error-1.txt  runtime-error-10.txt  runtime-error-11.txt  runtime-error-12.txt  runtime-error-2.txt  runtime-error-3.txt  runtime-error-4.txt  runtime-error-5.txt  runtime-error-6.txt  runtime-error-7.txt  (+12 more)
src/: analyze.rs  codegen.rs  convert.rs  interpreter.rs  intrinsics.rs  main.rs  parse_error.rs  parser.rs  path.rs  program.rs  repl.rs  test_analyze.rs  test_arity.rs  test_convert.rs  test_e2e.rs  test_interpreter.rs  test_parser.rs  test_tokenizer.rs  test_values.rs  tokenizer.rs
src/codegen/: c.h  c.rs  context.rs  js.js  js.rs  mod.rs  rs-defs.rs  rs.rs  target.rs
src/lang/: arity.rs  ast.rs  mod.rs  owned_value.rs  source_location.rs  symbol.rs  token.rs  type.rs  value.rs
src/lang/string/: api.rs  char_string.rs  mod.rs
tests/: integration.rs
tools/: check.sh
