[package]
name = "scatter"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.1.1"
clap = { version = "4.5.42", features = ["derive"] }
rstest = "0.26.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
all = {level= "warn", priority = -1 }
pedantic = {level= "warn", priority = -1 }
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
default_union_representation = "warn"
disallowed_script_idents = "warn"
empty_enum_variants_with_brackets = "warn"
exit = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
infinite_loop = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
mutex_integer = "warn"
non_zero_suggestions = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
implicit_clone = "warn"
suspicious_xor_used_as_pow = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
uninlined_format_args = "allow"

[lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
bare_trait_objects = "warn"
ellipsis_inclusive_range_patterns = "warn"
explicit_outlives_requirements = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
